--- a/application/layouts/scripts/footer.phtml
+++ b/application/layouts/scripts/footer.phtml
@@ -1,5 +1,5 @@
-<div id="footer" style="background-color: #EEEEEE; height: 30px;">
-    <div id="footer-logo" style="float: right">
-        <b>iso11179 application</b>
+<div id="footer">
+    <div id="footer-logo">
+        <b>ISO 11179</b>
     </div>
 </div>
