--- a/application/layouts/scripts/header.phtml
+++ b/application/layouts/scripts/header.phtml
@@ -1,11 +1,11 @@
-<div id="header" style="background-color: #EEEEEE; height: 30px;">
-    <div id="header-logo" style="float: left">
-        <b>iso 11179 implementation</b>
+<div id="header">
+    <div id="header-logo">
+        <b>ISO 11179</b>
     </div>
-    <div id="header-navigation" style="float: right">
+    <div id="header-navigation" >
         <a href="<?php echo $this->url(
             array('controller'=>'index'), 
             'default', 
-            true) ?>">linkie</a>
+            true) ?>">Home</a>
     </div>
 </div>
