--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -12,7 +12,7 @@ echo $this->doctype() ?>
   <?= $this->headlink(); ?>
 </head> 
 <body>
-<?= $this->render('header.phtml') ?>
+<? $this->render('header.phtml') ?>
 
 <div id="content" class='container showgrid'>
 	<div class='push+1 span-5 navigation'>
@@ -25,7 +25,7 @@ echo $this->doctype() ?>
 
 
 
-<?= $this->render('footer.phtml') ?>
+<? $this->render('footer.phtml') ?>
 
 </body>
 </html>
