--- a/application/views/scripts/partials/_data.phtml
+++ b/application/views/scripts/partials/_data.phtml
@@ -1,24 +1,18 @@
-    <?php foreach ($this->data as $row): ?>
-		<?php foreach ($row->toArray() as $column => $value): ?>
-			<?php if (in_array($column, $this->data->getTable()->getVisibleColumns())): ?>
-    			<dt><?php echo $this->escape($column) ?> => <?php echo $this->escape($value) ?></dt>
-			<?php endif ?>
-    	<?php endforeach ?>
-		<dd><?php
-		if (count($this->dependentData)) {
-			foreach ($this->dependentData as $entry) {
-				$dep = $row->findDependentRowset($entry)->current();
-				if ($dep) {
-					foreach ($dep->toArray() as $key => $value) {
-						if (in_array($key, $dep->getTable()->getVisibleColumns())) {
-							echo($dep->getTableClass().'.');
-							echo $this->escape($key); echo " => ";
-							echo $this->escape($value); echo "<br />";
-						}
-					}
-				}
+<table border="1">
+	<tr>
+		<?php
+		$value = $this->data[0];
+			foreach ($value as $key => $value) {
+				echo "<th>".$key."</th>";}
+		?>
+	</tr>
+	<tr>
+		<?php
+		foreach ($this->data as $key => $value) {
+			foreach ($value as $key => $value) {
+				echo "<td>".$value."</td>";
 			}
+			echo "</tr>";
 		}
-		 ?></dd>
-	<?php endforeach ?>
-</dl>
+		?>
+</table>
