--- a/application/views/scripts/index/add.phtml
+++ b/application/views/scripts/index/add.phtml
@@ -1,3 +1,6 @@
-<?= $this->placeholder('link'); ?>
-<?= $this->placeholder('dataGrid'); ?>
-<?= $this->placeholder('inputForm'); ?>
+<? $this->placeholder('link'); ?>
+<? $this->placeholder('dataGrid'); ?>
+<? $this->placeholder('inputForm'); ?>
+<?php $this->form->setAction($this->url()); ?>
+<?= $this->formResponse ?>
+<?= $this->form ?>
