--- a/application/views/scripts/index/list.phtml
+++ b/application/views/scripts/index/list.phtml
@@ -1,3 +1,4 @@
+<?= $this->formResponse; ?>
 <?= $this->placeholder('dataGrid'); ?>
 <?= $this->placeholder('inputForm'); ?>
 <?= $this->placeholder('link'); ?>
