--- a/application/views/scripts/index/edit.phtml
+++ b/application/views/scripts/index/edit.phtml
@@ -1,3 +1,7 @@
-<?= $this->placeholder('link'); ?>
-<?= $this->placeholder('dataGrid'); ?>
-<?= $this->placeholder('inputForm'); ?>
+<? $this->placeholder('link'); ?>
+<? $this->placeholder('dataGrid'); ?>
+<? $this->placeholder('inputForm'); ?>
+<?php 
+$this->form->setAction($this->url());
+echo $this->formResponse;
+echo $this->form;
