--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,1 +1,9 @@
+<div class="push-1">
+<form action="Index/search">
+    <input type="text" name="q"/>
+    <input type="submit" value="search"/>
+</form>
+</div>
+
 <h2 id='caption'>Welcome to the iso 11179 implementation</h2>
+
