--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -13,7 +13,7 @@ echo $this->doctype() ?>
 </head> 
 <body>
 <? $this->render('header.phtml') ?>
-<div id="content" class='container showgrid'>
+<div id="content" class='container'>
 	<div class='span-5 navigation'>
 		<?= $this->navigation()->menu(); ?>
 	</div>
